observability/apps/canary-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app
  namespace: observability
  labels:
    app: canary-app

spec:
  type: ClusterIP

  selector:
    app: canary-app

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
